# VerunLang

./: .gitignore  Cargo.toml  README.md  about.md
.github/workflows/: ci.yml  release.yml
docs/: 01-introduction.md  02-getting-started.md  03-core-concepts.md  04-language-guide.md  05-type-system.md  06-formal-verification.md  07-code-generation.md  08-cli-reference.md  README.md
examples/: auction.verun  buffer.verun  clamped.verun  counter.verun  escrow.verun  ledger.verun  match_workflow.verun  order.verun  rate_limiter.verun  stack.verun  thermostat.verun  token.verun  voting.verun
src/: lib.rs  main.rs
src/ast/: mod.rs  nodes.rs  span.rs  types.rs  visitor.rs
src/cli/: app.rs
src/cli/commands/: ast.rs  check.rs  fmt.rs  generate.rs  init.rs  mod.rs  run.rs
src/codegen/: c.rs  cairo.rs  formatter.rs  go.rs  java.rs  mod.rs  move_lang.rs  rust.rs  solidity.rs  target.rs  typescript.rs  vyper.rs
src/errors/: diagnostic.rs  mod.rs  report.rs
src/parser/: builder.rs  grammar.rs  imports.rs  mod.rs  verun.pest
src/runtime/: engine.rs  mod.rs  state.rs  value.rs
src/smt/: counterexample.rs  encoder.rs  mod.rs  solver.rs  verifier.rs
src/types/: checker.rs  env.rs  mod.rs  resolver.rs
tests/: codegen_tests.rs  import_tests.rs  parser_tests.rs  runtime_tests.rs  smt_tests.rs  type_tests.rs
