[package]
name = "verun"
version = "0.1.0"
edition = "2024"
description = "Programming by Executable Invariants — formal specification language with SMT verification"
license = "MIT"

[features]
static-z3 = ["z3/static-link-z3"]

[dependencies]
clap = { version = "4", features = ["derive"] }
pest = "2"
pest_derive = "2"
z3 = "0.12"
ariadne = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
